<resources>
    <string name="app_name">UMini!</string>
    <string name="mini">UMini!</string>
    <string name="snake">SNAKE</string>
    <string name="score">SCORE</string>
    <string name="_2048">2048</string>
    <string name="tic_tac_toe">TIC TAC TOE</string>
    <string name="restart">RESTART</string>
    <string name="back">BACK</string>
    <string name="saved_score">SAVED SCORE</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="coming_soon">COMING SOON !</string>
</resources>